fix Checkbox z-index

--- a/src/components/ui/Checkbox/Checkbox.module.scss
+++ b/src/components/ui/Checkbox/Checkbox.module.scss
@@ -26,7 +26,7 @@ button {
     content: '';
 
     position: absolute;
-    z-index: 1;
+    z-index: -1;
 
     display: none;
 
@@ -41,7 +41,6 @@ button {
     background-color: var(--color-dark-500);
 
     &::before {
-      z-index: -1;
       display: inline-block;
       background-color: var(--color-dark-500);
     }
